cad viewer update

--- a/DekiApp_pyqt5/Screens/InspectionPlannerScreen_UI.ui
+++ b/DekiApp_pyqt5/Screens/InspectionPlannerScreen_UI.ui
@@ -648,7 +648,10 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="goToConstructionBtn">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="minimumSize">
          <size>
           <width>0</width>
