--- a/DekiApp_pyqt5/Screens/cadViewWidgetExtended.ui
+++ b/DekiApp_pyqt5/Screens/cadViewWidgetExtended.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>560</width>
-    <height>297</height>
+    <height>296</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -71,7 +71,7 @@ QComboBox{
    <item>
     <widget class="QWidget" name="viewerContainer" native="true">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -216,7 +216,7 @@ QComboBox{
       <item>
        <widget class="QWidget" name="viewerFrame" native="true">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
