--- a/DekiApp_pyqt5/Screens/new_construction_UI.ui
+++ b/DekiApp_pyqt5/Screens/new_construction_UI.ui
@@ -127,34 +127,52 @@ font:  italic 12pt &quot;Calibri&quot;;
           <number>2</number>
          </property>
          <item>
-          <widget class="QLabel" name="label">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>40</height>
-            </size>
+          <widget class="QFrame" name="frame_2">
+           <property name="frameShape">
+            <enum>QFrame::StyledPanel</enum>
            </property>
-           <property name="font">
-            <font>
-             <family>Calibri,Helvetica,sans-serif</family>
-             <pointsize>14</pointsize>
-             <weight>75</weight>
-             <italic>false</italic>
-             <bold>true</bold>
-            </font>
+           <property name="frameShadow">
+            <enum>QFrame::Raised</enum>
            </property>
-           <property name="layoutDirection">
-            <enum>Qt::LeftToRight</enum>
-           </property>
-           <property name="text">
-            <string>Add new construction</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
-           </property>
-           <property name="indent">
-            <number>20</number>
-           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <widget class="QLabel" name="label">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <family>Calibri,Helvetica,sans-serif</family>
+                <pointsize>14</pointsize>
+                <weight>75</weight>
+                <italic>false</italic>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="layoutDirection">
+               <enum>Qt::LeftToRight</enum>
+              </property>
+              <property name="text">
+               <string>Add new construction</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+              </property>
+              <property name="indent">
+               <number>20</number>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </widget>
          </item>
          <item>
@@ -625,7 +643,7 @@ font:  italic 12pt &quot;Calibri&quot;;
                <set>Qt::AlignCenter</set>
               </property>
               <property name="placeholderText">
-               <string>Construction Name</string>
+               <string>MainConstruction Name</string>
               </property>
               <property name="cursorMoveStyle">
                <enum>Qt::VisualMoveStyle</enum>
@@ -1371,17 +1389,14 @@ font:  italic 12pt &quot;Calibri&quot;;
           <number>2</number>
          </property>
          <item>
-          <widget class="QWidget" name="cadViewer" native="true">
+          <widget class="QWidget" name="constructionPreviewFrame" native="true">
            <property name="minimumSize">
             <size>
              <width>0</width>
              <height>0</height>
             </size>
            </property>
-           <layout class="QVBoxLayout" name="verticalLayout_10">
-            <property name="spacing">
-             <number>0</number>
-            </property>
+           <layout class="QVBoxLayout" name="verticalLayout_5">
             <property name="leftMargin">
              <number>0</number>
             </property>
@@ -1395,49 +1410,16 @@ font:  italic 12pt &quot;Calibri&quot;;
              <number>0</number>
             </property>
             <item>
-             <widget class="QWidget" name="docViewContainer" native="true">
+             <widget class="QWidget" name="docsViewerContainer" native="true">
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>0</height>
+                <height>390</height>
                </size>
               </property>
-              <layout class="QHBoxLayout" name="horizontalLayout_9">
-               <property name="spacing">
-                <number>0</number>
-               </property>
-               <property name="leftMargin">
-                <number>0</number>
-               </property>
-               <property name="topMargin">
-                <number>0</number>
-               </property>
-               <property name="rightMargin">
-                <number>0</number>
-               </property>
-               <property name="bottomMargin">
-                <number>0</number>
-               </property>
-               <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-                <widget class="QWidget" name="docViewer" native="true">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="minimumSize">
-                  <size>
-                   <width>0</width>
-                   <height>0</height>
-                  </size>
-                 </property>
-                </widget>
-               </item>
-              </layout>
              </widget>
             </item>
-            <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
+            <item>
              <widget class="QWidget" name="cadViewerContainer" native="true">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -1448,7 +1430,7 @@ font:  italic 12pt &quot;Calibri&quot;;
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>0</height>
+                <height>390</height>
                </size>
               </property>
              </widget>
