--- a/DekiApp_pyqt5/Screens/InspectionPlannerScreen_UI.ui
+++ b/DekiApp_pyqt5/Screens/InspectionPlannerScreen_UI.ui
@@ -258,7 +258,7 @@
                </size>
               </property>
               <property name="text">
-               <string>ID:</string>
+               <string>Tag:</string>
               </property>
              </widget>
             </item>
