--- a/DekiApp_pyqt5/resources.qrc
+++ b/DekiApp_pyqt5/resources.qrc
@@ -680,4 +680,21 @@
     <file>Icons/169__umbrella.svg</file>
     <file>Icons/170__leaves.svg</file>
   </qresource>
+  <qresource prefix="Pictures">
+    <file>Pictures/jt_001.png</file>
+    <file>Pictures/jt_002.png</file>
+    <file>Pictures/jt_003.png</file>
+    <file>Pictures/jt_004.png</file>
+    <file>Pictures/jt_005.png</file>
+    <file>Pictures/Logo_twojpartner1.png</file>
+    <file>Pictures/stagger.png</file>
+    <file>Pictures/weldNote.png</file>
+    <file>Pictures/jt_001.png</file>
+    <file>Pictures/jt_002.png</file>
+    <file>Pictures/jt_003.png</file>
+    <file>Pictures/jt_004.png</file>
+    <file>Pictures/jt_005.png</file>
+    <file>Pictures/Logo_twojpartner1.png</file>
+    <file>Pictures/weldNote.png</file>
+  </qresource>
 </RCC>
